<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity">
    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_str_add"
        app:showAsAction="always"/>
    <item
		android:id="@+id/menu_delete"
        android:icon="@android:drawable/ic_menu_delete"
		android:title="@string/menu_str_delete"
		app:showAsAction="always"/>
    <item
        android:id="@+id/menu_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/menu_str_help"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_str_settings"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_export"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menu_str_backup"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_upload"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/menu_str_upload"
        app:showAsAction="never"/>
</menu>
